--- a/docker-composer/docker-compose.yml
+++ b/docker-composer/docker-compose.yml
@@ -3,7 +3,8 @@ services:
     container_name: postgres-db
     image: postgres:15.1
     volumes:
-      - postgres-db:/var/lib/postgresql/data
+      # - postgres-db:/var/lib/postgresql/data
+      - ./postgres_db:/var/lib/postgresql/data
     environment:
       - POSTGRES_PASSWORD=123456
 
@@ -17,6 +18,6 @@ services:
       - PGADMIN_DEFAULT_PASSWORD=123456
       - PGADMIN_DEFAULT_EMAIL=superman@google.com
 
-volumes:
-  postgres-db:
-    external: true
+# volumes:
+#   postgres-db:
+#     external: true
