--- a/docker-composer/docker-compose.yml
+++ b/docker-composer/docker-compose.yml
@@ -14,6 +14,8 @@ services:
     image: dpage/pgadmin4:6.17
     ports:
       - "8080:80"
+    volumes:
+      - ./pgadmin:/var/lib/pgadmin
     environment:
       - PGADMIN_DEFAULT_PASSWORD=123456
       - PGADMIN_DEFAULT_EMAIL=superman@google.com
