publicar en docker hub

--- a/cron-ticket/Dockerfile
+++ b/cron-ticket/Dockerfile
@@ -5,10 +5,12 @@ FROM node:19.2-alpine3.16
 WORKDIR /app
 
 #destino /app path relativo al WORKDIR
-COPY app.js package.json ./
+COPY package.json ./
 
 #installar las dependencias
 RUN npm install
+
+COPY app.js ./
 
 #Ejecutar aplicacion
 CMD ["node", "app.js"]
