optimizando el dockker

--- a/cron-ticket/Dockerfile
+++ b/cron-ticket/Dockerfile
@@ -4,16 +4,22 @@ FROM node:19.2-alpine3.16
 # cd app
 WORKDIR /app
 
-#destino /app path relativo al WORKDIR
+# destino /app path relativo al WORKDIR
 COPY package.json ./
 
-#installar las dependencias
+# installar las dependencias
 RUN npm install
 
-COPY app.js ./
+COPY . .
+
+# Realizar la prueba
+RUN npm run test
+
+# Eliminar files no necesarios en prod
+RUN rm -rf test && rm -rf node_modules
+
+# unicamente las depd de prod
+RUN npm install --prod
 
 #Ejecutar aplicacion
 CMD ["node", "app.js"]
-
-
-
